# Codex-Presence

./: .gitignore  README.md  electron-builder.config.cjs  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
native/discord-presence-bridge/: CMakeLists.txt
native/discord-presence-bridge/src/: json_protocol.cpp  json_protocol.hpp  main.cpp  presence_service.cpp  presence_service.hpp
scripts/: cdp-settings-smoke.cjs  clean-build.cjs  smoke.cjs  verify-release.cjs
scripts/icon-smoke-app/: index.cjs  package.json
src/main/: app-icon.ts  automation.ts  detector.ts  diagnostics.ts  discord-protocol.ts  discord.ts  git.ts  idle.ts  index.ts  payload.ts  preload.ts  privacy-panic.ts  runtime-controls.ts  settings.ts  timeline.ts  tray-menu.ts
src/renderer/: app.ts  global.d.ts  index.html  reference.css  style.css
src/shared/: privacy.ts  types.ts
src/tests/: automatic-status.test.ts  core.test.ts  idle.test.ts  runtime-features.test.ts  runtime-tools.test.ts
