cmake_minimum_required(VERSION 3.24)
project(discord_presence_bridge LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SDK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../vendor/discord-social-sdk")
if(NOT EXISTS "${SDK_ROOT}/include/discordpp.h")
  message(FATAL_ERROR "Discord Social SDK missing. See vendor/discord-social-sdk/README.md")
endif()
find_library(DISCORD_SDK_LIBRARY NAMES discord_partner_sdk discord_social_sdk PATHS "${SDK_ROOT}/lib" NO_DEFAULT_PATH REQUIRED)
add_executable(discord-presence-bridge src/main.cpp src/json_protocol.cpp src/presence_service.cpp)
target_include_directories(discord-presence-bridge PRIVATE "${SDK_ROOT}/include" src)
target_link_libraries(discord-presence-bridge PRIVATE "${DISCORD_SDK_LIBRARY}")
if(MSVC)
  target_compile_options(discord-presence-bridge PRIVATE /W4 /permissive-)
endif()
